--- a/suderereact/src/styles/Statistic/StatisticSort.scss
+++ b/suderereact/src/styles/Statistic/StatisticSort.scss
@@ -1,7 +1,8 @@
 .statistic {
     display: flex;
+    justify-content: center;
     flex-direction: row;
-    width: 100%;
+    width: 76%;
 
 
     &__fieldset {
