--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -28,3 +28,4 @@
 @import "./Statistic/StatisticCenters.scss";
 @import "./Statistic/StatisticDate.scss";
 @import "./Statistic/StatisticDuration.scss";
+@import "./Statistic/StatisticChoice.scss"
