--- a/suderereact/src/styles/Statistic/StatisticDate.scss
+++ b/suderereact/src/styles/Statistic/StatisticDate.scss
@@ -1,6 +1,13 @@
 .date {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
     &__fieldset {
-        margin-top: 5px;
+        width: 90%;
+        margin-top: 1vh;
+        border: 1px solid gray;
+        padding: 5px;
 
         &__legend {}
 
@@ -9,8 +16,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-left: 20px;
-            margin-right: 20px;
+
+            @media screen and (max-width: 700px) {
+                flex-direction: column;
+            }
 
             &__label {
                 width: 20px;
@@ -18,9 +27,14 @@
             }
 
             &__input {
+                font-size: 2vh;
                 font-family: $Avenir;
                 width: 70%;
-                height: 30%;
+                height: 3vh;
+
+                @media screen and (max-width: 700px) {
+                    width: 95%;
+                }
             }
         }
     }
