--- a/suderereact/src/styles/Statistic/StatisticDuration.scss
+++ b/suderereact/src/styles/Statistic/StatisticDuration.scss
@@ -1,7 +1,13 @@
 .duration {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 
     &__fieldset {
-        margin-top: 5px;
+        width: 90%;
+        margin-top: 1vh;
+        border: 1px solid gray;
+        padding: 5px;
 
         &__legend {}
 
@@ -9,12 +15,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-left: 20px;
-            margin-right: 20px;
 
             &__label {
-                width: 120px;
-                height: 10px;
+                margin-top: 1vh;
+                word-wrap: break-word;
             }
 
             &__select {
