--- a/suderereact/src/styles/Statistic/StatisticFieldset.scss
+++ b/suderereact/src/styles/Statistic/StatisticFieldset.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    vertical-align: center;
 
 
     &__title {
@@ -12,7 +13,7 @@
         align-items: center;
         height: 10%;
         width: 100%;
-        font-size: 25px;
+        font-size: 3vh;
         color: $carbone;
         background-color: $warm_gray_1;
     }
@@ -20,12 +21,14 @@
     &__center {
         height: 80%;
         width: 100%;
+        display: flex;
+        flex-direction: column;
 
         &__num1 {
             display: flex;
             flex-direction: column;
             width: 100%;
-            font-size: 12px;
+            font-size: 2vh;
             color: $carbone;
         }
 
@@ -33,7 +36,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            font-size: 12px;
+            font-size: 2vh;
             color: $carbone;
         }
 
@@ -41,7 +44,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            font-size: 12px;
+            font-size: 2vh;
             color: $carbone;
         }
 
@@ -49,7 +52,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            font-size: 12px;
+            font-size: 2vh;
             color: $carbone;
         }
     }
