--- a/suderereact/src/styles/Statistic/StatisticGraphic.scss
+++ b/suderereact/src/styles/Statistic/StatisticGraphic.scss
@@ -3,7 +3,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     &__title {
         display: flex;
@@ -17,56 +16,48 @@
     }
 
     &__legend {
-        display: flex;
-        width: 100%;
-        height: 10%;
-        justify-content: space-around;
-        flex-direction: row;
-        align-items: center;
-        background-color: $warm_gray_1;
+        align-items: flex-start;
+        width: 40%;
+        background-color: $warm_gray_3;
+        margin-left: 10px;
 
-        &__treated {
+        &__line {
             display: flex;
             align-items: center;
+            flex-direction: row;
             height: 20px;
-            padding-left: 5px;
-            padding-right: 5px;
-            font-size: 12px;
-            background-color: $vert_pomme;
-            color: $carbone;
-        }
 
-        &__partially {
-            display: flex;
-            align-items: center;
-            height: 20px;
-            padding-left: 5px;
-            padding-right: 5px;
-            font-size: 12px;
-            background-color: $safran;
-            color: $carbone;
-        }
+            &__treated {
+                height: 12px;
+                width: 11px;
+                margin-right: 5px;
+                background-color: $vert_pomme;
+            }
 
-        &__to-treat {
-            display: flex;
-            align-items: center;
-            height: 20px;
-            padding-left: 5px;
-            padding-right: 5px;
-            font-size: 12px;
-            background-color: $raspberry;
-            color: $carbone;
-        }
+            &__partially {
+                height: 12px;
+                width: 11px;
+                margin-right: 5px;
+                background-color: $safran;
+            }
 
-        &__never-treat {
-            display: flex;
-            align-items: center;
-            height: 20px;
-            padding-left: 5px;
-            padding-right: 5px;
-            font-size: 12px;
-            background-color: $raspberry;
-            color: $carbone;
+            &__to-treat {
+                height: 12px;
+                width: 11px;
+                margin-right: 5px;
+                background-color: $raspberry;
+            }
+
+            &__never-treat {
+                height: 12px;
+                width: 11px;
+                margin-right: 5px;
+                background-color: $raspberry;
+            }
+
+            &__p {
+                font-size: 1em;
+            }
         }
     }
 }
