--- a/suderereact/src/styles/_choiceHome.scss
+++ b/suderereact/src/styles/_choiceHome.scss
@@ -6,18 +6,22 @@
     height: 68vh;
     justify-content: center;
 
-    @media screen and (max-width: 520px) {
+    @media screen and (max-width: 653px) {
         flex-direction: column-reverse;
     }
 
     &__nav {
         margin-right: 12%;
 
+        @media screen and (max-width: 653px) {
+            margin-right: 0;
+        }
+
         &__train {
             background-color: $warm_gray_1;
             border: none;
 
-            @media screen and (max-width: 520px) {
+            @media screen and (max-width: 653px) {
                 margin-right: 0;
             }
 
@@ -26,7 +30,7 @@
                 background-color: $warm_gray_1;
                 border: none;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     height: 7rem;
                     margin: 2rem;
                 }
@@ -39,10 +43,12 @@
             &__title {
                 color: $carbone;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     margin: 8px;
                 }
             }
+
+
         }
 
         &__train:hover {
@@ -63,14 +69,14 @@
             &__img {
                 height: 12rem;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     height: 7rem;
                 }
 
                 &__2 {
                     max-height: 100%;
 
-                    @media screen and (max-width: 520px) {
+                    @media screen and (max-width: 653px) {
                         opacity: 0.5;
                     }
                 }
@@ -79,13 +85,13 @@
             &__title-1 {
                 color: $carbone;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     margin: 8px;
                     margin-bottom: 1px;
                 }
             }
 
-            @media screen and (max-width: 520px) {
+            @media screen and (max-width: 653px) {
                 display: none;
             }
 
@@ -98,14 +104,14 @@
             &__img {
                 height: 12rem;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     height: 7rem;
                 }
 
                 &__2 {
                     max-height: 100%;
 
-                    @media screen and (max-width: 520px) {
+                    @media screen and (max-width: 653px) {
                         opacity: 0.5;
                     }
                 }
@@ -114,7 +120,7 @@
             &__title-1 {
                 color: $carbone;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     margin: 8px;
                     margin-bottom: 1px;
                 }
@@ -124,7 +130,7 @@
                 display: none;
                 color: $raspberry;
 
-                @media screen and (max-width: 520px) {
+                @media screen and (max-width: 653px) {
                     margin: 8px;
                     display: block;
                     font-size: 2vh;
@@ -132,7 +138,7 @@
                 }
             }
 
-            @media screen and (min-width: 520px) {
+            @media screen and (min-width: 653px) {
                 display: none;
             }
 
@@ -146,7 +152,7 @@
                 color: $orange;
             }
 
-            @media screen and (max-width: 520px) {
+            @media screen and (max-width: 653px) {
                 transform: none;
             }
         }
