--- a/suderereact/src/styles/CommonPage/_leftPage.scss
+++ b/suderereact/src/styles/CommonPage/_leftPage.scss
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     font-family: $Avenir;
+
     @media screen and (max-width: 520px) {
         width: 100%;
         display: flex;
@@ -19,6 +20,7 @@
         transform: rotate(180deg);
         writing-mode: vertical-rl;
         text-orientation: mixed;
+
         @media screen and (max-width: 520px) {
             width: 100%;
             transform: rotate(0deg);
@@ -30,6 +32,7 @@
         & h1 {
             margin: 0;
             font-size: 5vh;
+
             @media screen and (max-width: 520px) {
                 font-size: 3vh;
             }
@@ -42,17 +45,31 @@
         height: 100%;
         width: 80%;
         justify-content: center;
+
         @media screen and (max-width: 520px) {
             align-items: center;
             width: 100%;
         }
 
+        &__mobile {
+            color: $orange;
+            font-size: 2.1vh;
+            display: none;
+
+            @media screen and (max-width: 520px) {
+                display: flex;
+            }
+        }
+
+
         &__topBloc {
             display: flex;
             flex-direction: column;
             align-items: center;
+            // justify-content: center;
             height: 30%;
             width: 100%;
+
             @media screen and (max-width: 520px) {
                 flex-direction: row;
             }
@@ -60,6 +77,7 @@
             &__return {
                 width: 100%;
                 height: auto;
+                margin-right: 5%;
 
                 &__button {
                     margin-bottom: 20px;
@@ -75,10 +93,12 @@
                     &:hover {
                         background-image: url("../../../public/pictures/logo/flecheOrange.jpg");
                     }
+
                     @media screen and (max-width: 520px) {
                         margin-bottom: 0;
                     }
                 }
+
                 @media screen and (max-width: 520px) {
                     width: 80px;
                 }
@@ -87,8 +107,9 @@
             & p {
                 color: $orange;
                 font-size: 2.1vh;
+
                 @media screen and (max-width: 520px) {
-                    width: 380px;
+                    display: none;
                 }
             }
 
@@ -105,6 +126,7 @@
                     -webkit-appearance: none;
                     margin: 0;
                 }
+
                 @media screen and (max-width: 520px) {
                     margin: 0 20px;
                 }
@@ -117,6 +139,7 @@
                 font-size: 1.6vh;
                 padding: 10px;
             }
+
             @media screen and (max-width: 520px) {
                 width: 90%;
             }
@@ -126,6 +149,7 @@
             height: 45%;
             width: 100%;
             font-family: $Avenir;
+
             @media screen and (max-width: 520px) {
                 display: none;
             }
@@ -164,6 +188,7 @@
             justify-content: center;
             height: 20%;
             width: 100%;
+
             @media screen and (max-width: 520px) {
                 display: none;
             }
@@ -217,5 +242,40 @@
                 }
             }
         }
+    }
+
+    &__infoRame {
+        color: $orange;
+        width: 100%;
+        height: 100%;
+
+
+        &__mobile {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            background-color: $warm_gray_1;
+            color: $orange;
+            text-align: center;
+            margin-top: 15px;
+
+            & h4 {
+                display: flex;
+                flex-direction: column;
+                margin: 0;
+                font-size: 2vh;
+
+                & span {
+                    color: $carbone;
+                }
+            }
+        }
+
+        @media screen and (min-width: 520px) {
+            display: none;
+        }
+
     }
 }
