stats add chart Bar

--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -26,6 +26,5 @@
 @import "./Statistic/StatisticAxes.scss";
 @import "./Statistic/StatisticSeries.scss";
 @import "./Statistic/StatisticCenters.scss";
-@import "./Statistic/StatisticDate.scss";
-@import "./Statistic/StatisticDuration.scss";
-@import "./Statistic/StatisticChoice.scss"
+@import "./Statistic/StatisticChoice.scss";
+@import "./Statistic/switch.css"
