--- a/suderereact/src/styles/Statistic/StatisticChartDoughnut.scss
+++ b/suderereact/src/styles/Statistic/StatisticChartDoughnut.scss
@@ -1,13 +1,20 @@
 .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 80%;
 
+    &__text {
+        font-size: 10px;
+        color: $carbone;
+        margin-top: 20px;
+    }
+
     &__doughnut {
         margin: auto;
         width: 30vw;
-        margin-top: 10px;
+        margin-top: 60px;
     }
 }
