--- a/suderereact/src/styles/Statistic/StatisticFieldset.scss
+++ b/suderereact/src/styles/Statistic/StatisticFieldset.scss
@@ -22,44 +22,49 @@
         height: 80%;
         width: 100%;
         display: flex;
+        align-items: center;
         flex-direction: column;
 
         &__num1 {
             display: flex;
+            justify-content: center;
             flex-direction: column;
             width: 100%;
+            height: 60%;
             font-size: 2vh;
             color: $carbone;
         }
 
         &__num2 {
             display: flex;
-            flex-direction: column;
-            width: 100%;
-            font-size: 2vh;
-            color: $carbone;
-        }
+            flex-direction: row;
+            align-items: flex-end;
+            justify-content: space-around;
+            width: 95%;
+            height: 15%;
 
-        &__num3 {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            font-size: 2vh;
-            color: $carbone;
-        }
+            &__train,
+            &__trailers {
+                font-size: 14px;
+                color: $carbone;
+            }
 
-        &__num4 {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            font-size: 2vh;
-            color: $carbone;
-        }
-    }
+            &__button {
 
-    &__footer {
-        height: 10%;
-        width: 100%;
-        background-color: $warm_gray_1;
+
+                &__img1 {
+                    background-image: url(../../styles/image/switch_trailer.png);
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    width: 100px;
+                    height: 30px;
+
+                }
+
+                &__img2 {
+                    background-image: url(../../styles/image/switch_train.png);
+                }
+            }
+        }
     }
 }
