--- a/suderereact/src/styles/Administration/_connectedUser.scss
+++ b/suderereact/src/styles/Administration/_connectedUser.scss
@@ -3,6 +3,8 @@
     height: 35vh;
     display: flex;
     align-items: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
     &__list {
         padding: 0;
         list-style: none;
@@ -10,7 +12,7 @@
         font-size: 1.5vw;
 
         &__item {
-            text-transform: uppercase;
+            text-transform: lowercase;
         }
     }
 }
