--- a/suderereact/src/styles/Administration/_dashboardRight.scss
+++ b/suderereact/src/styles/Administration/_dashboardRight.scss
@@ -1,5 +1,8 @@
 .dashboardRight {
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    height: 100%;
     &__title {
         display: block;
         margin-top: 1.5%;
@@ -39,9 +42,13 @@
         }
     }
     &__outlet {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         margin-right: 1.5%;
         margin-left: 1.5%;
         margin-bottom: 1.5%;
         background-color: $warm_gray_3;
+        height: 95%;
     }
 }
