--- a/suderereact/src/styles/Administration/_myProfile.scss
+++ b/suderereact/src/styles/Administration/_myProfile.scss
@@ -4,15 +4,11 @@
     padding-top: 1.5%;
     padding-bottom: 1.5%;
     width: 97%;
+    height: 95%;
     display: flex;
     flex-direction: row;
-    &__myProfile {
-        display: flex;
-        flex-direction: column;
-        width: 38.5%;
-        margin-right: 1.5%;
-        display: flex;
-        flex-direction: column;
+    &__myProfile {    
+        width: 40%;
         &__top {
             &__title {
                 font-size: 1vw;
@@ -27,6 +23,7 @@
             }
         }
         &__bottom {
+            height: 95%;
             &__title {
                 font-size: 1vw;
                 padding: 10px;
@@ -34,9 +31,11 @@
                 margin-top: 10px;
                 margin-bottom: 10px;
                 text-align: center;
+                
             }
             &__myPassword {
                 background-color: $warm_gray_1;
+
             }
         }
     }
