--- a/suderereact/src/styles/index.scss
+++ b/suderereact/src/styles/index.scss
@@ -31,4 +31,5 @@
 @import "./Statistic/StatisticSeries.scss";
 @import "./Statistic/StatisticCenters.scss";
 @import "./Statistic/StatisticChoice.scss";
-@import "./Statistic/switch.css"
+@import "./Statistic/switch.css";
+@import "./Administration/updateDatabase"
